[build-system]
requires = ["setuptools>=42", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "tools21cm"
version = "2.2.6"
authors = [
    { name = "Sambit Giri", email = "sambit.giri@gmail.com" }
]
description = "A package for 21cm tools"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "numpy",
    # Add other dependencies here, such as scipy, pandas, etc.
]

[tool.setuptools]
packages = ["tools21cm"]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
tools21cm = ["input_data/*"]

[tool.setuptools.ext-modules]
tools21cm.ViteBetti_cython = {
    sources = ["src/tools21cm/ViteBetti_cython.pyx"],
    language = "c++",
    include_dirs = ["numpy.get_include()"],
}

[tool.cythonize]
language_level = 3
